# marine

d455_custom_launch/: package.xml  setup.cfg  setup.py
d455_custom_launch/d455_custom_launch/: d455_record.py
d455_custom_launch/launch/: custom.launch.py
d455_custom_launch/params/: d455_config.yaml
gps_localization/: package.xml  setup.py
gps_localization/gps_localization/: gps_localization.py
gps_localization/launch/: gps_localization.launch.py
marin_cartographer/: package.xml  setup.cfg  setup.py
marin_cartographer/config/: marin.lua
marin_cartographer/launch/: marin_cartographer.launch.py  occupancy_grid.launch.py
marin_cartographer/map/: first_map.pgm  first_map.yaml  second_map.yaml
nav2_custom/: CMakeLists.txt  package.xml  plugins.xml
nav2_custom/include/nav2_custom/costmap_plugins/: backup2
nav2_custom/launch/: gps_launch.py  gps_test_launch.py  navigation_launch.py
nav2_custom/params/: 0506.yaml  backup.yaml  ekf_gps.yaml  ekf_gps_test.yaml  nav2_params.yaml  seg.yaml
nav2_custom/src/costmap_plugins/: backup  backup2  sidewalk_layer.cpp
nav2_custom/src/nav2_custom/: waypoint_sender.py
nav2_custom/xml/: custom.xml
ros2_socketcan/ros2_socketcan/include/ros2_socketcan/: socket_can_receiver.hpp  socket_can_sender.hpp
ros2_socketcan/ros2_socketcan/launch/: socket_can_bridge.launch.xml  socket_can_receiver.launch.py  socket_can_sender.launch.py
ros2_socketcan/ros2_socketcan/src/: socket_can_receiver_node.cpp  socket_can_sender_node.cpp
scout_mini_base/launch/: marin_launch.py
scout_mini_ros2/scout_mini_base/config/: scout_mini.yaml
scout_mini_ros2/scout_mini_base/launch/: base_launch.py
scout_mini_ros2/scout_mini_description/urdf/: scout_mini.urdf.xacro
velodyne/launch/: velodyne-all-nodes-VLP16-launch.py
yolo_detect/: package.xml
yolo_segmentation/yolo_segmentation/: segmentation_node.py
