<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>d455_custom_launch</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dh@todo.todo">dh</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>realsense2_camera</depend>

  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
