<package format="2">
  <name>nav2_custom</name>
  <version>0.0.1</version>
  <description>Custom Navigation Package for ROS2</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- 필수 의존성 추가 -->
  <depend>ament_cmake</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_common</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>tf2_ros</depend>


  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin="${prefix}/plugins.xml"/>
  </export>
</package>
